 - Switched a_UIcmd_save() to take its URL from history (not location bar).
 - Set prefs.vw_fontname as deafult font for the UI.
 - Fix: recover page focus when clicking-out of a widget.
 - Fixed a segfault bug in the test/ directory.
 - Set middle click to submit in a new TAB. (Helps to keep form data!)
 - Added support for the Q element. BUG#343
 - Cleaned up Html_pop_tag().
   Patches: place (AKA corvid)
+- Switched SSL-enabled to configure.in (./configure --enable-ssl).
 - Standardised the installation of dpid/dpidrc with auto* tools.
 - Set the ScrollGroup as the resizable widget in downloads dpi.
 - Cleaned up and normalized D_SUN_LEN usage.
   Patches: Jeremy Henty
+- Implemented Basic authentication!
   Patch: Jeremy Henty, Jorge Arellano Cid
+- Allowed compilation with older machines by removing a few C99isms.
 - Added use of inttypes.h when stdint.h isn't found.
   Patches: Dan Fandrich
+- Made the DNS resolver report in numeric address notation.
   Patch: Justus Winter
+- Reduced warnings with gcc-4.3.
   Patch: Thomas Orgis
+- Made the parser recognize "[^ ]/>"-terminated XML elements.
   Patch: Johannes Hofmann
+- Added the "middle_click_drags_page" dillorc option.
   Patch: Jorge Arellano Cid, Thomas Orgis
+- Set the File menu label to hide when the File menu-button is shown.
 ? Trying a new iconv() test in configure.in.
 - Allowed the rc parser to skip whitespace around the equal sign.
 - Fixed the parser not to call Html_tag_close_* functions twice.
   Patches: Jorge Arellano Cid

dw

+- Moved clicked from ButtonResource to Resource.
   Patch: place (AKA corvid)
+- Cleaned up unused code in fltkviewbase.
   Patch: Johannes Hofmann

-----------------------------------------------------------------------------

dillo-2.0

+- Ported Dillo from GTK1 to FLTK2.
 - Ported a susbstantial part of the code from C to C++ (FLTK2 is in C++).
 - Wrote a new library: Dlib. With "Dlib" Dillo doesn't need glib anymore.
 - Ported all the code to Dlib.