@@ -20,6 +20,7 @@ dillo-2.1
  - Set middle click to submit in a new TAB. (Helps to keep form data!)
  - Added support for the Q element. BUG#343
  - Cleaned up Html_pop_tag().
+ - Ported the command line interface from dillo1 (XID not working yet).
    Patches: place (AKA corvid)
 +- Switched SSL-enabled to configure.in (./configure --enable-ssl).
  - Standardised the installation of dpid/dpidrc with auto* tools.
